tests/sources/valid/var_string.minipl
var hello: string := "Hello, World!";