tests/sources/invalid/late_binding.minipl
//print a;
var a: string := "too late!";